--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -18,7 +18,9 @@
 <%= render partial: 'comments/form' %>
 <br />
 <br />
-<%= link_to "edit", edit_article_path(@article) %>
-<%= link_to "delete", article_path(@article),method: :delete,data: {confirm: "Really delete the article?"}
-%>
+<% if logged_in? %>
+  <%= link_to "edit", edit_article_path(@article) %>
+  <%= link_to "delete", article_path(@article), method: :delete,
+  data: {confirm: "Really delete the article?"}%>
+<% end %>
 <%= link_to "<< Back to articles list", articles_path %>
